objects/bizible2__Bizible_ABTest__c.object
<CustomObject>
    <fields>
        <fullName>bizible2__BizibleId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>BizibleId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bizible2__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__DateReported__c</fullName>
        <label>Date Reported</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__ExperimentId__c</fullName>
        <label>ExperimentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Experiment__c</fullName>
        <label>Experiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__UserId__c</fullName>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__VariationId__c</fullName>
        <label>VariationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Variation__c</fullName>
        <label>Variation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bizible ABTest</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bizible ABTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>